# Algorytmy---pomiary

./: CMakeLists.txt  main.cpp
Struktury/: Graf.cpp  Graf.h  node.cpp  node.h  ranGen.cpp  ranGen.h
Struktury/BellmanFord/: BF.cpp  BF.h
Struktury/Dijkstra/: Dijkstra.cpp  Dijkstra.h
Struktury/Kopiec/: kopiec.cpp  kopiec.h
Struktury/Kruskal/: Kruskal.cpp  Kruskal.h
Struktury/Lista/: lista.cpp  lista.h
Struktury/Prima/: Prima.cpp  Prima.h
Struktury/Slist/: nList.cpp  nList.h
