cmake_minimum_required(VERSION 3.24)
project(SDIZOPROJEKT2Testy)

set(CMAKE_CXX_STANDARD 17)

add_executable(SDIZOPROJEKT2Testy main.cpp Struktury/Graf.cpp Struktury/node.cpp Struktury/Tablica/tablica.h Struktury/Slist/nList.cpp Struktury/Prima/Prima.h Struktury/Lista/listaElement.cpp Struktury/Lista/lista.cpp Struktury/Kruskal/Kruskal.cpp Struktury/Kopiec/kopiec.cpp Struktury/Dijkstra/Dijkstra.cpp Struktury/BellmanFord/BF.cpp Struktury/ranGen.cpp Struktury/ranGen.h Struktury/Prima/Prima.cpp)
